Use paint recording scale factor instead of device scale factor

The paint recording scale factor is set to 1 when pixel canvas is
disabled. We cannot use the value of PaintContext::device_scale_factor
for the recording scale factor in such cases.

Bug: 813463
Change-Id: If51bfde2e271ce863cf3971016ee6347cbce592a
Component: Tabs, Clipping, Scaling
Reviewed-on: https://chromium-review.googlesource.com/927182
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537876}
Former-commit-id: 51706e1cfa0c8f3b26be99a7d4de4ffaf908f673